--- a/index.html
+++ b/index.html
@@ -84,6 +84,14 @@
                   font-size: 16;
                   font-weight: bold;
             }
+
+            .theoneone {
+                  margin: auto;
+                  width: 60%;
+                  text-align: center;
+                  font-size: smaller;
+                  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            }
             
       </style>
       <script src='//cbtb.clickbank.net/?vendor=huntsell1'></script>
@@ -279,12 +287,13 @@
                                     <p class="style8" align="center">"Grab
                                           Your Copy Today, Even If
                                           It Is 2 A.M. In The Morning!"</p>
-                                    <p class="style1" align="center"><strong>Purchase
+                                    <p class="style1" align="center"><strong><a href="https://huntsell1.pay.clickbank.net/?cbitems=2">Purchase
                                                 A Copy For Only
-                                                $</strong>19.99<br />
+                                                $</strong>19.99</a><br />
                                     </p>
                                     <p class="style1" align="center">
-                                          <img src="images/buynow.jpg" width="60%" /></p>
+                                          <a href="https://huntsell1.pay.clickbank.net/?cbitems=2">
+                                          <img src="images/buynow.jpg" width="60%" /></p></a>
                                     <p class="style1"><strong>Warm
                                                 Regards,<br />
                                                 <span class="style4">Hunter Ummels</span></strong>
@@ -304,6 +313,14 @@
                   </tr>
             </tbody>
       </table>
+      <div class="theoneone">
+            <span style="color: #1D1D1D;">&copy; Copyright by: Hunter Ummels,</span> <a href="#">
+                  www.weightwarriors.ga</a> <span style="color: #000;">|</span>
+      <p>Disclaimer:<br />ClickBank is the retailer of products on this site. CLICKBANK® is a registered trademark of Click
+            Sales, Inc., a Delaware corporation located at 1444 S. Entertainment Ave., Suite 410 Boise, ID 83709,
+            USA and used by permission. ClickBank's role as retailer does not constitute an endorsement, approval or
+            review of these products or any claim, statement or opinion used in promotion of these products.</p>
+            </div>
 </body>
 
 </html>
