--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
             <tbody>
                   <tr>
                         <td class="style1" bgcolor="#ffffff">
-                              <p class="style2" align="center">&ldquo;Get
+                              <p class="style2" align="center">Get
                                     Your Hands On The Ultimate Guide For Live Improvement Through Weight
-                                    Loss And Let It's Magic Change Your Life Forever!" </p>
+                                    Loss And Let It's Magic Change Your Life Forever!</p>
                               <p class="style3" align="center">Discover
                                     How Ordinary People Can Have Extraordinary Shape Through The Science Of
                                     Weight Loss!</p>
@@ -159,8 +159,8 @@
                               </p>
                               <p class="style1" align="left">Are
                                     you ready?</p>
-                              <p class="style10" align="center"><span class="style11">"Introducing&hellip;</span>
-                                    Weight Warriors!<span class="style11">"</span></p>
+                              <p class="style10" align="center"><span class="style11">Introducing&hellip;
+                                    Weight Warriors!</span></p>
                               <p class="style1" align="center">
                                     <img style="border: 0px solid ; width: 300px; height: 393px;" alt=""
                                           src="images/ebook-S.jpg" /></p>
@@ -232,9 +232,9 @@
                                                 </tr>
                                           </tbody>
                                     </table>
-                                    <p class="style8" align="center">"Why
+                                    <p class="style8" align="center">Why
                                           It Is Very Important For
-                                          You To Invest In This Book Right Now..."</p>
+                                          You To Invest In This Book Right Now...</p>
                                     <p> <span class="style1">What's really important now is NOT the
                                                 tiny amount you'll invest in this book but how much you'll LOSE OUT if
                                                 you
@@ -260,8 +260,8 @@
                                     <p class="style1">And
                                           to show my sincerity, I'll show you
                                           something that will definitely sweeten the deal...</p>
-                                    <p class="style8" align="center">"Here
-                                          Is Your Unbeatable Deal Of Your Life!"</p>
+                                    <p class="style8" align="center">Here
+                                          Is Your Unbeatable Deal Of Your Life!</p>
                                     <p class="style1">This
                                           book could be the most important book you
                                           will ever read. Make no mistake about it because if you
@@ -284,9 +284,9 @@
                                                 </tr>
                                           </tbody>
                                     </table>
-                                    <p class="style8" align="center">"Grab
+                                    <p class="style8" align="center">Grab
                                           Your Copy Today, Even If
-                                          It Is 2 A.M. In The Morning!"</p>
+                                          It Is 2 A.M. In The Morning!</p>
                                     <p class="style1" align="center"><strong><a href="https://huntsell1.pay.clickbank.net/?cbitems=2">Purchase
                                                 A Copy For Only
                                                 $</strong>19.99</a><br />
